// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Friends only 1`] = `
<main
  class="flex w-full h-screen s-704Ys9uC0Q3P"
  style="height: 100vh;"
>
  <section
    class="flex-1 s-704Ys9uC0Q3P"
  />
   
  <aside
    class="s-2iawX3uhhnz1"
  >
    <section
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-1"
      style="width: 25vw; transition: width var(--short);"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="s-vqhOCvFa7LzI"
          role="tablist"
          style="--corner1: url(#clip-path-10010); --corner2: url(#clip-path-10020);"
        >
          <li
            class="bg s-vqhOCvFa7LzI"
          />
           
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-expanded="true"
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  people_alt
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-1"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
         
        <svg
          class="s-vqhOCvFa7LzI"
          style="width: 0px; height: 0px;"
        >
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10010"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10020"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
        </svg>
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-2iawX3uhhnz1"
        >
          <div
            class="peers s-2iawX3uhhnz1 hidden"
          >
            <div
              class="s-9CzX_ZtBT-9N"
              style="--rows: 1; --columns: 1;"
            >
               
            </div>
            <!--&lt;AvatarGrid&gt;-->
             
            <legend
              class="s-uuldoZl5F298"
            >
               
            </legend>
            <!--&lt;VideoCommands&gt;-->
             
          </div>
           
          <section
            aria-roledescription="friend-list"
            class="s-2FHiERVIQQ6s"
          >
            <h3
              class="s-2FHiERVIQQ6s"
            >
              Vos ami·e·s
            </h3>
             
            <span
              class="s-PYEUE3EzsI5c"
            >
              <input
                class="s-PYEUE3EzsI5c"
                id="toggle-searchability"
                type="checkbox"
              />
               
              <label
                class="s-PYEUE3EzsI5c"
                for="toggle-searchability"
              >
                Les autres joueurs peuvent vous demander en ami·e.
              </label>
            </span>
            <!--&lt;UsernameSearchability&gt;-->
             
            <ol
              class="s-PJ48chyAailx"
              role="listbox"
            >
              <li
                class="s-PJ48chyAailx"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Fernand Naudin"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    FN
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-PJ48chyAailx"
                  role="term"
                >
                  Fernand Naudin
                </span>
                 
                <span
                  class="buttons s-PJ48chyAailx"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        delete
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                class="s-PJ48chyAailx isRequest"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Paul Wolfoni"
                    class="s-engCJu8q-fNe hasImage"
                    height="40"
                    referrerpolicy="no-referrer"
                    src="/tests/fixtures/avatar.png"
                    width="40"
                  />
                   
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-PJ48chyAailx"
                  role="term"
                >
                  Paul Wolfoni souhaite rejoindre vos ami·e·s
                </span>
                 
                <span
                  class="buttons s-PJ48chyAailx"
                >
                  <button
                    class="primary s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        check
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                   
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        clear
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                class="s-PJ48chyAailx isProposal"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Raoul Wolfoni"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    RW
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-PJ48chyAailx"
                  role="term"
                >
                  Demande envoyée à Raoul Wolfoni
                </span>
                 
                <span
                  class="buttons s-PJ48chyAailx"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        delete
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                class="s-PJ48chyAailx"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    MF
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-PJ48chyAailx"
                  role="term"
                >
                  Maître Follas
                </span>
                 
                <span
                  class="buttons s-PJ48chyAailx"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        delete
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
              <li
                class="s-PJ48chyAailx"
              >
                <figure
                  class="s-engCJu8q-fNe"
                  style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    P
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-PJ48chyAailx"
                  role="term"
                >
                  Pascal
                </span>
                 
                <span
                  class="buttons s-PJ48chyAailx"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        delete
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
            </ol>
             
            
            <!--&lt;FriendList&gt;-->
             
            <div
              class="s-2FHiERVIQQ6s"
            >
              <span
                aria-expanded="true"
                aria-haspopup="menu"
                class="wrapper s-JM3fRWrV7jJU"
              >
                <fieldset
                  class="s-Fe6WNbR-55zp"
                >
                  <legend
                    class="s-Fe6WNbR-55zp"
                  >
                    Pseudo à inviter
                  </legend>
                   
                  <input
                    class="s-Fe6WNbR-55zp"
                    type="text"
                  />
                </fieldset>
                <!--&lt;Input&gt;-->
                 
                
                <!--&lt;Menu&gt;-->
              </span>
              <!--&lt;Typeahead&gt;-->
               
              <button
                class="s-NMyTiX1zi6rz"
                disabled=""
              >
                <div
                  class="s-NMyTiX1zi6rz"
                >
                  <span
                    class="material-icons s-NMyTiX1zi6rz"
                  >
                    person_add_alt_1
                  </span>
                  
                  
                </div>
                 
              </button>
              <!--&lt;Button&gt;-->
            </div>
             
          </section>
          
          <!--&lt;Container&gt;-->
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Container&gt;-->
</main>
`;

exports[`Lobby 1`] = `
<main
  class="flex w-full h-screen s-704Ys9uC0Q3P"
  style="height: 100vh;"
>
  <section
    class="flex-1 s-704Ys9uC0Q3P"
  />
   
  <aside
    class="s-2iawX3uhhnz1"
  >
    <section
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-2"
      style="width: 25vw; transition: width var(--short);"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="s-vqhOCvFa7LzI"
          role="tablist"
          style="--corner1: url(#clip-path-10030); --corner2: url(#clip-path-10040);"
        >
          <li
            class="bg s-vqhOCvFa7LzI"
          />
           
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-expanded="true"
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  contacts
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F4
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-expanded="true"
              aria-selected="true"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  people_alt
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-2"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
         
        <svg
          class="s-vqhOCvFa7LzI"
          style="width: 0px; height: 0px;"
        >
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10030"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10040"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
        </svg>
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-2iawX3uhhnz1"
        >
          <div
            class="peers s-2iawX3uhhnz1 hidden"
          >
            <div
              class="s-9CzX_ZtBT-9N"
              style="--rows: 1; --columns: 1;"
            >
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #73778c; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Bastien"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Bastien
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
               
            </div>
            <!--&lt;AvatarGrid&gt;-->
             
            <legend
              class="s-uuldoZl5F298"
            >
               
            </legend>
            <!--&lt;VideoCommands&gt;-->
             
            <div
              class="lobby-instructions s-2iawX3uhhnz1"
            >
              Pour transformer ce salon en jeu, choisissez un de vos jeux disponibles.
            </div>
          </div>
           
          <section
            aria-roledescription="player-list"
            class="s-2FHiERVIQQ6s"
          >
            <h3
              class="s-2FHiERVIQQ6s"
            >
              Participant·e·s
            </h3>
             
            <ol
              class="s-i-J0I6k9Mfa4"
            >
              <li
                class="s-i-J0I6k9Mfa4"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 40px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    MF
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-i-J0I6k9Mfa4"
                  role="term"
                >
                  Maître Follas
                </span>
                 
                <span
                  class="buttons s-i-J0I6k9Mfa4"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        highlight_remove
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                   
                </span>
                 
              </li>
              <li
                class="s-i-J0I6k9Mfa4"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 40px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    P
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-i-J0I6k9Mfa4"
                  role="term"
                >
                  Pascal
                </span>
                 
                <span
                  class="buttons s-i-J0I6k9Mfa4"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        highlight_remove
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                   
                </span>
                 
              </li>
              <li
                class="s-i-J0I6k9Mfa4 isNotFriend"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 40px; --color: #73778c; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Bastien"
                    class="s-engCJu8q-fNe"
                    height="40"
                    referrerpolicy="no-referrer"
                    width="40"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    B
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                <span
                  class="s-i-J0I6k9Mfa4"
                  role="term"
                >
                  Bastien
                </span>
                 
                <span
                  class="buttons s-i-J0I6k9Mfa4"
                >
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        highlight_remove
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                   
                  <button
                    class="s-NMyTiX1zi6rz"
                  >
                    <div
                      class="s-NMyTiX1zi6rz"
                    >
                      <span
                        class="material-icons s-NMyTiX1zi6rz"
                      >
                        person_add_alt_1
                      </span>
                      
                      
                    </div>
                     
                  </button>
                  <!--&lt;Button&gt;-->
                </span>
                 
              </li>
            </ol>
            <!--&lt;PlayerList&gt;-->
             
          </section>
           
          <div
            class="discussion s-0ASxPKiLViNe"
          >
            <h3
              class="s-0ASxPKiLViNe"
            >
              Discussion
            </h3>
             
            <div
              class="messages s-0ASxPKiLViNe"
            >
              <span
                class="s-39hAxfuGaFJz"
              >
                15 sept. 2023
              </span>
              <!--&lt;Day&gt;-->
              
              <div
                class="s-r0DnIy4wO_3-"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 30px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Fernand Naudin"
                    class="s-engCJu8q-fNe"
                    height="30"
                    referrerpolicy="no-referrer"
                    width="30"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    FN
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
              </div>
               
              <span
                class="time s-r0DnIy4wO_3-"
              >
                8:44:46
              </span>
               
              <span
                class="message s-r0DnIy4wO_3-"
              >
                Qu'est-ce qui se passe encore ?
              </span>
              <!--&lt;Message&gt;-->
              
              
              <div
                class="s-r0DnIy4wO_3-"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 30px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="30"
                    referrerpolicy="no-referrer"
                    width="30"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    MF
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
              </div>
               
              <span
                class="time s-r0DnIy4wO_3-"
              >
                8:44:47
              </span>
               
              <span
                class="message s-r0DnIy4wO_3-"
              >
                Notre ami va se faire un plaisir de vous l'expliquer.
              </span>
              <!--&lt;Message&gt;-->
              
              
              <div
                class="s-r0DnIy4wO_3-"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 30px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="30"
                    referrerpolicy="no-referrer"
                    width="30"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    P
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
              </div>
               
              <span
                class="time s-r0DnIy4wO_3-"
              >
                8:44:47
              </span>
               
              <span
                class="message s-r0DnIy4wO_3-"
              >
                Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
              </span>
              <!--&lt;Message&gt;-->
              
              
              <div
                class="s-r0DnIy4wO_3-"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 30px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Fernand Naudin"
                    class="s-engCJu8q-fNe"
                    height="30"
                    referrerpolicy="no-referrer"
                    width="30"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    FN
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
              </div>
               
              <span
                class="time s-r0DnIy4wO_3-"
              >
                8:44:48
              </span>
               
              <span
                class="message s-r0DnIy4wO_3-"
              >
                Et tu tiens ça d'où ?
              </span>
              <!--&lt;Message&gt;-->
              
              
              <div
                class="s-r0DnIy4wO_3-"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 30px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="30"
                    referrerpolicy="no-referrer"
                    width="30"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    P
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
              </div>
               
              <span
                class="time s-r0DnIy4wO_3-"
              >
                8:44:48
              </span>
               
              <span
                class="message s-r0DnIy4wO_3-"
              >
                Je ne peux pas le dire, j'ai promis. Ce serait mal.
              </span>
              <!--&lt;Message&gt;-->
              
              
              <div
                class="s-r0DnIy4wO_3-"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 30px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Fernand Naudin"
                    class="s-engCJu8q-fNe"
                    height="30"
                    referrerpolicy="no-referrer"
                    width="30"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    FN
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
              </div>
               
              <span
                class="time s-r0DnIy4wO_3-"
              >
                8:44:49
              </span>
               
              <span
                class="message s-r0DnIy4wO_3-"
              >
                Alors ?
              </span>
              <!--&lt;Message&gt;-->
              
              
              <div
                class="s-r0DnIy4wO_3-"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 30px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="30"
                    referrerpolicy="no-referrer"
                    width="30"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    MF
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
              </div>
               
              <span
                class="time s-r0DnIy4wO_3-"
              >
                8:44:49
              </span>
               
              <span
                class="message s-r0DnIy4wO_3-"
              >
                Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
              </span>
              <!--&lt;Message&gt;-->
              
              
              <div
                class="s-r0DnIy4wO_3-"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 30px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Fernand Naudin"
                    class="s-engCJu8q-fNe"
                    height="30"
                    referrerpolicy="no-referrer"
                    width="30"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    FN
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
              </div>
               
              <span
                class="time s-r0DnIy4wO_3-"
              >
                8:44:50
              </span>
               
              <span
                class="message s-r0DnIy4wO_3-"
              >
                Bon, on va y aller, hmm ?
              </span>
              <!--&lt;Message&gt;-->
              
              
              <div
                class="s-r0DnIy4wO_3-"
              >
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 30px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="30"
                    referrerpolicy="no-referrer"
                    width="30"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe abbreviated"
                  >
                    P
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
              </div>
               
              <span
                class="time s-r0DnIy4wO_3-"
              >
                8:44:50
              </span>
               
              <span
                class="message s-r0DnIy4wO_3-"
              >
                Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
              </span>
              <!--&lt;Message&gt;-->
              
              
            </div>
             
            <form
              class="s-0ASxPKiLViNe"
            >
              <fieldset
                class="s-Fe6WNbR-55zp"
              >
                 
                <input
                  class="s-Fe6WNbR-55zp"
                />
              </fieldset>
              <!--&lt;Input&gt;-->
               
              <button
                class="s-NMyTiX1zi6rz"
                disabled=""
                title="Envoyer à tous"
                type="submit"
              >
                <div
                  class="s-NMyTiX1zi6rz"
                >
                  <span
                    class="material-icons s-NMyTiX1zi6rz"
                  >
                    send
                  </span>
                  
                  
                </div>
                 
              </button>
              <!--&lt;Button&gt;-->
            </form>
          </div>
          <!--&lt;Container&gt;-->
          
          
          <!--&lt;Container&gt;-->
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Container&gt;-->
</main>
`;

exports[`Multiple connected 1`] = `
<main
  class="flex w-full h-screen s-704Ys9uC0Q3P"
  style="height: 100vh;"
>
  <section
    class="flex-1 s-704Ys9uC0Q3P"
  >
    <button
      class="s-NMyTiX1zi6rz"
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          add
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          remove
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
  </section>
   
  <aside
    class="s-2iawX3uhhnz1"
  >
    <section
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-5"
      style="width: 25vw; transition: width var(--short);"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="s-vqhOCvFa7LzI"
          role="tablist"
          style="--corner1: url(#clip-path-10090); --corner2: url(#clip-path-10100);"
        >
          <li
            class="bg s-vqhOCvFa7LzI"
          />
           
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-expanded="true"
              aria-selected="true"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  contacts
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F4
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-expanded="true"
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  auto_stories
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F3
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-expanded="true"
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  people_alt
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-expanded="true"
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  help
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-5"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
         
        <svg
          class="s-vqhOCvFa7LzI"
          style="width: 0px; height: 0px;"
        >
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10090"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10100"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
        </svg>
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-2iawX3uhhnz1"
        >
          <div
            class="peers s-2iawX3uhhnz1"
          >
            <div
              class="s-9CzX_ZtBT-9N"
              style="--rows: 1; --columns: 1;"
            >
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #73778c; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Bastien"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Bastien
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
               
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Fernand Naudin"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Fernand Naudin
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
            </div>
            <!--&lt;AvatarGrid&gt;-->
             
            <legend
              class="s-uuldoZl5F298"
            >
               
            </legend>
            <!--&lt;VideoCommands&gt;-->
             
          </div>
           
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Container&gt;-->
</main>
`;

exports[`No peers 1`] = `
<main
  class="flex w-full h-screen s-704Ys9uC0Q3P"
  style="height: 100vh;"
>
  <section
    class="flex-1 s-704Ys9uC0Q3P"
  />
   
  <aside
    class="s-2iawX3uhhnz1"
  >
    <section
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-3"
      style="width: 25vw; transition: width var(--short);"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="s-vqhOCvFa7LzI"
          role="tablist"
          style="--corner1: url(#clip-path-10050); --corner2: url(#clip-path-10060);"
        >
          <li
            class="bg s-vqhOCvFa7LzI"
          />
           
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-expanded="true"
              aria-selected="true"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  auto_stories
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F3
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-expanded="true"
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  help
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-3"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
         
        <svg
          class="s-vqhOCvFa7LzI"
          style="width: 0px; height: 0px;"
        >
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10050"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10060"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
        </svg>
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-2iawX3uhhnz1"
        >
          <div
            class="peers s-2iawX3uhhnz1 hidden"
          >
            <div
              class="s-9CzX_ZtBT-9N"
              style="--rows: 1; --columns: 1;"
            >
               
            </div>
            <!--&lt;AvatarGrid&gt;-->
             
            <legend
              class="s-uuldoZl5F298"
            >
               
            </legend>
            <!--&lt;VideoCommands&gt;-->
             
          </div>
           
          <section
            class="s-HS2qv-2i033g"
          >
            <menu
              class="s-HS2qv-2i033g"
            >
              <button
                class="s-NMyTiX1zi6rz"
                disabled=""
              >
                <div
                  class="s-NMyTiX1zi6rz"
                >
                  <span
                    class="material-icons s-NMyTiX1zi6rz"
                  >
                    navigate_before
                  </span>
                  
                  
                </div>
                 
              </button>
              <!--&lt;Button&gt;-->
               
              1
              /
              4
               
              <button
                class="s-NMyTiX1zi6rz"
              >
                <div
                  class="s-NMyTiX1zi6rz"
                >
                  <span
                    class="material-icons s-NMyTiX1zi6rz"
                  >
                    navigate_next
                  </span>
                  
                  
                </div>
                 
              </button>
              <!--&lt;Button&gt;-->
            </menu>
             
            <div
              class="image-container s-HS2qv-2i033g"
            >
              <img
                alt="Livre de règles, page 1"
                class="s-HS2qv-2i033g"
                src="http://localhost:3001/games/splendor/rules/fr/1.webp"
              />
            </div>
          </section>
          <!--&lt;RuleViewer&gt;-->
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Container&gt;-->
</main>
`;

exports[`No peers, no rules book 1`] = `undefined`;

exports[`Single connected 1`] = `
<main
  class="flex w-full h-screen s-704Ys9uC0Q3P"
  style="height: 100vh;"
>
  <section
    class="flex-1 s-704Ys9uC0Q3P"
  />
   
  <aside
    class="s-2iawX3uhhnz1"
  >
    <section
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-4"
      style="width: 25vw; transition: width var(--short);"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="s-vqhOCvFa7LzI"
          role="tablist"
          style="--corner1: url(#clip-path-10070); --corner2: url(#clip-path-10080);"
        >
          <li
            class="bg s-vqhOCvFa7LzI"
          />
           
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-expanded="true"
              aria-selected="true"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  contacts
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F4
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-expanded="true"
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  auto_stories
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F3
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-expanded="true"
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  people_alt
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-expanded="true"
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  help
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-4"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
         
        <svg
          class="s-vqhOCvFa7LzI"
          style="width: 0px; height: 0px;"
        >
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10070"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10080"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
        </svg>
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-2iawX3uhhnz1"
        >
          <div
            class="peers s-2iawX3uhhnz1"
          >
            <div
              class="s-9CzX_ZtBT-9N"
              style="--rows: 1; --columns: 1;"
            >
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #73778c; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Bastien"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Bastien
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
               
            </div>
            <!--&lt;AvatarGrid&gt;-->
             
            <legend
              class="s-uuldoZl5F298"
            >
               
            </legend>
            <!--&lt;VideoCommands&gt;-->
             
          </div>
           
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Container&gt;-->
</main>
`;

exports[`Single connected, no rules book, thread 1`] = `
<main
  class="flex w-full h-screen s-704Ys9uC0Q3P"
  style="height: 100vh;"
>
  <section
    class="flex-1 s-704Ys9uC0Q3P"
  />
   
  <aside
    class="s-2iawX3uhhnz1"
  >
    <section
      aria-label="minimizable"
      class="s-vqhOCvFa7LzI"
      id="minimizable-section-7"
      style="width: 25vw; transition: width var(--short);"
    >
      <menu
        class="right s-vqhOCvFa7LzI"
      >
        <ol
          class="s-vqhOCvFa7LzI"
          role="tablist"
          style="--corner1: url(#clip-path-10130); --corner2: url(#clip-path-10140);"
        >
          <li
            class="bg s-vqhOCvFa7LzI"
          />
           
          <li
            class="s-vqhOCvFa7LzI active"
          >
            <button
              aria-expanded="true"
              aria-selected="true"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  contacts
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F4
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-expanded="true"
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  people_alt
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F2
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
          <li
            class="s-vqhOCvFa7LzI"
          >
            <button
              aria-expanded="true"
              aria-selected="false"
              class="transparent s-NMyTiX1zi6rz"
              role="tab"
            >
              <div
                class="s-NMyTiX1zi6rz"
              >
                <span
                  class="material-icons s-NMyTiX1zi6rz"
                >
                  help
                </span>
                
                
              </div>
               
              <span
                class="badge s-NMyTiX1zi6rz"
              >
                F1
              </span>
            </button>
            <!--&lt;Button&gt;-->
             
          </li>
        </ol>
         
        <div
          aria-controls="minimizable-section-7"
          class="gutter s-vqhOCvFa7LzI"
          role="scrollbar"
        />
         
        <svg
          class="s-vqhOCvFa7LzI"
          style="width: 0px; height: 0px;"
        >
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10130"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 1 C 0.5 1 0.5 0 1 0 V 1 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
          <clippath
            class="s-vqhOCvFa7LzI"
            clipPathUnits="objectBoundingBox"
            id="clip-path-10140"
          >
            <path
              class="s-vqhOCvFa7LzI"
              d="M 0 0 C 0.5 0 0.5 1 1 1 H 0 Z"
              transform="rotate(90) scale(1, -1)"
              transform-origin="0.5 0.5"
            />
          </clippath>
        </svg>
      </menu>
       
      <span
        class="s-vqhOCvFa7LzI"
      >
        <div
          class="content s-2iawX3uhhnz1"
        >
          <div
            class="peers s-2iawX3uhhnz1"
          >
            <div
              class="s-9CzX_ZtBT-9N"
              style="--rows: 1; --columns: 1;"
            >
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Maître Follas"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Maître Follas
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Pascal"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Pascal
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
              
              <section
                class="s-IEYcsUOCmov_"
                data-testid="player-avatar"
              >
                <video
                  autoplay=""
                  class="s-IEYcsUOCmov_"
                />
                 
                <figure
                  class="s-engCJu8q-fNe colored"
                  style="--dimension: 150px; --color: #73778c; --top: undefinedpx; --left: undefinedpx; --border-width: 5px"
                >
                  <img
                    alt="avatar for Bastien"
                    class="s-engCJu8q-fNe"
                    height="150"
                    referrerpolicy="no-referrer"
                    width="150"
                  />
                   
                  <figcaption
                    class="s-engCJu8q-fNe"
                  >
                    Bastien
                  </figcaption>
                </figure>
                <!--&lt;PlayerThumbnail&gt;-->
                 
                 
              </section>
              <!--&lt;PlayerAvatar&gt;-->
               
            </div>
            <!--&lt;AvatarGrid&gt;-->
             
            <legend
              class="s-uuldoZl5F298"
            >
               
            </legend>
            <!--&lt;VideoCommands&gt;-->
             
          </div>
           
        </div>
      </span>
    </section>
    <!--&lt;MinimizableSection&gt;-->
  </aside>
  <!--&lt;Container&gt;-->
</main>
`;
